# plato-mythos-glue

./: pyproject.toml
src/plato_mythos_glue/: __init__.py  room_loader.py  tile_encoder.py  training_data.py
