[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-mythos-glue"
version = "0.1.0"
description = "Runtime glue between PLATO Room Server and plato-mythos model"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/SuperInstance/plato-mythos-glue"

[tool.hatch.build.targets.wheel]
packages = ["src/plato_mythos_glue"]
